@@ -1,3 +1,9 @@
+2002-06-26  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>
+
+	* w3m.el (toplevel): Stricten the pattern to detect w3m version.
+	(w3m-info-like-map): Changed key bindings of `w3m-shift-left' and
+	`w3m-shift-right'.
+
 2002-06-25  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>
 
 	* w3m.el (w3m-use-ange-ftp): Chenged its default value to nil.
